--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.26.0",
     "sqlite3": "^5.1.2",
-    "jsonwebtoken": "^9.0.0"
+    "uuid": "^9.0.0"
   }
 }
